fix: build errors